--- a/webapp/src/ionicapp/www/templates/device.html
+++ b/webapp/src/ionicapp/www/templates/device.html
@@ -50,14 +50,14 @@
       </div>
     </div>
     <div class="spacer" style="height: 20px;"></div>
-    <button id="device-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button_half">UART</button>
-    <button id="device-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button_half">GPIO</button>
+    <button id="device-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button_half">UART</button>
+    <button id="device-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button_half">GPIO</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="device-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button_half">I2C</button>
-    <button id="device-button58" ng-click="submitADC()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button_half">ADC</button>
+    <button id="device-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button_half">I2C</button>
+    <button id="device-button58" ng-click="submitADC()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button_half">ADC</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="device-button59" ng-click="submit1WIRE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button_half">OneWire</button>
-    <button id="device-button74" ng-click="submitTPROBE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button_half">TProbe</button>
+    <button id="device-button59" ng-click="submit1WIRE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button_half">OneWire</button>
+    <button id="device-button74" ng-click="submitTPROBE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button_half">TProbe</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
   </ion-content>
 </ion-view>
