--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -19,9 +19,9 @@
       <ion-list id="menu-list1" class="manual-list-fullwidth">
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item2" ui-sref="menu.profile({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-contact"></i>Profile</ion-item>
-        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-ios-cog"></i>Account</ion-item>
+          <i class="icon ion-ios-cog"></i>Credits</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
