--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -68,6 +68,11 @@ table, th, td {
 	background-color: #FFFFFF;
 }
 
+.card_id_devices {
+	margin-left: 15px;
+	height: 16px;
+}
+
 .card_image_devices {
 	vertical-align: text-bottom;
 	margin-left: 15px;
@@ -77,6 +82,11 @@ table, th, td {
 .card_label_devices {
 	display: inline-block;
 	height: 16px;
+}
+
+.card_label_devicegroups {
+	margin-left: 15px;
+	height: 20px;
 }
 
 .device_info_top_back {
