Added support for multi-factor authentication (MFA)

--- a/webapp/src/ionicapp/www/templates/feedback.html
+++ b/webapp/src/ionicapp/www/templates/feedback.html
@@ -7,11 +7,15 @@
       </div>
       <form id="feedback-form58" class="list">
         <div id="feedback-button-bar5" class="button-bar">
-          <button id="feedback-button73" ng-class="{'active': data.feedback.rating==1}" ng-click="changeSection(1)" class="button button-energized button-block button-clear icon ion-ios-star"></button>
-          <button id="feedback-button67" ng-class="{'active': data.feedback.rating==2}" ng-click="changeSection(2)" class="button button-energized button-block button-clear icon ion-ios-star"></button>
-          <button id="feedback-button68" ng-class="{'active': data.feedback.rating==3}" ng-click="changeSection(3)" class="button button-energized button-block button-clear icon ion-ios-star"></button>
-          <button id="feedback-button70" ng-class="{'active': data.feedback.rating==4}" ng-click="changeSection(4)" class="button button-energized button-block button-clear icon ion-ios-star"></button>
-          <button id="feedback-button71" ng-class="{'active': data.feedback.rating==5}" ng-click="changeSection(5)" class="button button-energized button-block button-clear icon ion-ios-star"></button>
+          <button id="feedback-button73" ng-class="{'active': data.feedback.rating==1}" class="button button-energized button-block button-clear"></button>
+          <button id="feedback-button166" ng-class="{'active': data.feedback.rating==1}" class="button button-energized button-block button-clear"></button>
+          <button id="feedback-button162" ng-class="{'active': data.feedback.rating==1}" ng-click="changeSection(1)" class="button button-energized button-block button-clear icon ion-android-star-outline"></button>
+          <button id="feedback-button67" ng-class="{'active': data.feedback.rating==2}" ng-click="changeSection(2)" class="button button-energized button-block button-clear icon ion-android-star-outline"></button>
+          <button id="feedback-button68" ng-class="{'active': data.feedback.rating==3}" ng-click="changeSection(3)" class="button button-energized button-block button-clear icon ion-android-star-outline"></button>
+          <button id="feedback-button70" ng-class="{'active': data.feedback.rating==4}" ng-click="changeSection(4)" class="button button-energized button-block button-clear icon ion-android-star-outline"></button>
+          <button id="feedback-button71" ng-class="{'active': data.feedback.rating==5}" ng-click="changeSection(5)" class="button button-energized button-block button-clear icon ion-android-star-outline"></button>
+          <button id="feedback-button163" ng-class="{'active': data.feedback.rating==5}" class="button button-energized button-block button-clear"></button>
+          <button id="feedback-button168" ng-class="{'active': data.feedback.rating==5}" class="button button-energized button-block button-clear"></button>
         </div>
       </form>
       <div id="feedback-markdown26" class="show-list-numbers-and-dots">
